Ready with the PugClass

--- a/componentes/head.pug
+++ b/componentes/head.pug
@@ -1,5 +1,6 @@
 head
 	title Platzi Games
 	meta(charset="UTF-8")
-	link(rel="stylesheet",href='css/ejercicio-pug.css')
+	link(rel="stylesheet",href='../css/ejercicio-pug.css')
+	//- link(rel="stylesheet",href='../css/ejercicio-pug.css')
 	
