--- a/homepage.pug
+++ b/homepage.pug
@@ -1,14 +1,13 @@
 extend componentes/plantilla.pug
 block contenidos
-	main.intro
+	main.intro 
 		section.intro__imagen
 			h1 MENU 
-			ul Acerca
-			ul Noticias
-			ul Contacto
+			ul
+				each menuitos in enlaces
+					li= menuitos
 		section.intro__contenido
 			h1 Homepage	
 			p Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, odio eum, veritatis impedit voluptatum illo at sequi debitis rerum, minima ut nihil. Qui corporis saepe fugit facilis voluptatibus odit aperiam?
-			
 			p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora nulla doloribus officiis! Corrupti blanditiis animi, minima quae facere quos quisquam tempora facilis eveniet voluptate asperiores. Minus porro beatae iusto quae?
 			a.boton VER MAS
